--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="yi-gNoxUQx5eowTgaSKwk70z5NL5Bv8KhdVMLnSPsUM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Ultimate Guide to Car Care Products: What Does Your Vehicle Really Need?">
